--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@
 }
 header button {
   transition: transform 300ms;
+  display: grid;
+  place-content: center center;
 }
 
 header button:hover {
@@ -120,7 +122,7 @@ header h1 {
   display: flex;
 }
 #n {
-  width: 1.5em;
+  width: 2.5em;
   height: 1.5em;
   vertical-align: middle;
   font-size: 1.5em;
